--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="logo192.png" />
+    <script>
+      (function() {
+        window.onresize = function() {
+          var winW = document.documentElement.clientWidth || document.body.clientWidth;
+          if (winW > 750) winW = 750;
+          document.documentElement.style.fontSize = winW / 3.75 + "px";
+        };
+        window.onresize();
+      })(window);
+    </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
